# simulacron

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  main.cpp  main.py  physics.c  physics.cpp  physics.h  physics.hpp  physics.py  rnd.py  test.c  test.cpp
